# AlphaGomoku

./: .gitignore  REPOSITORY_SUMMARY.md  chess_plan.MD  env.py  evaluate.py  implementation_plan.md  notebook.ipynb  notes.md  pyproject.toml  test.ipynb  trainer.py
cfg/: eval.yaml  pong_ppo_config.yaml  train.yaml
config/: config.yaml  eval.yaml  play.yaml  train.yaml  train_versus.yaml
config/environment/: gomoku.yaml
config/gomoku/: 15x15.yaml  5x5.yaml  9x9.yaml
config/ppo/: default.yaml
env/: __init__.py  functional_gomoku.py  gomoku.py  renderer.py
experiments/: evaluate.py  my_jit_module.py  notebook.ipynb  parallel_training.py  plot_entropy_coef.py  run.sh  scan_vmap.py  setup.sh  sharding.ipynb  test.py  test_jax.py  test_jit_logging.py  test_run.sh
gomoku/: __init__.py  env.py  renderer.py
models/: __init__.py  actor_critic.py  dqn.py  pong_actor_critic.py
outputs/play/2025-04-20/19-50-08/.hydra/: config.yaml  hydra.yaml
outputs/play/2025-04-20/19-50-41/.hydra/: hydra.yaml
policy/: __init__.py  actor_critic.py
scripts/: main.py  train.py
src/alphagomoku/: __init__.py
src/alphagomoku/common/: rollout.py
src/alphagomoku/environments/: __init__.py  base.py  chess.py  gomoku.py
src/alphagomoku/models/: __init__.py
src/alphagomoku/models/gomoku/: __init__.py  actor_critic.py
src/alphagomoku/policy/: ppo.py
src/alphagomoku/scripts/: play.py
src/alphagomoku/training/: rollout.py  sharding.py  test_run.py  train_ppo.py  train_ppo_versus.py
tests/: test_env.py  test_functional_gomoku.py  test_gomoku.py  test_pong.py  test_rollout.py  test_train.py
training/: rollout.py  train.py  train_pong_ppo.py
training/trainer/: __init__.py  policy_gradient_trainer.py  ppo_trainer.py  self_play_trainer.py
utils/: config.py  logging_utils.py
wandb/: latest-run
wandb/run-20250417_170232-5fmn03ru/: run-5fmn03ru.wandb
wandb/run-20250417_170232-5fmn03ru/files/: config.yaml  wandb-metadata.json
wandb/run-20250417_170445-pzae04as/: run-pzae04as.wandb
wandb/run-20250417_170445-pzae04as/files/: requirements.txt  wandb-metadata.json
wandb/run-20250417_170629-sbtgowqc/: run-sbtgowqc.wandb
wandb/run-20250417_170629-sbtgowqc/files/: config.yaml  wandb-metadata.json
(+27 files in other folders)
